# wat

./: README.md  pyproject.toml
wat/: cli.py
